tests/fail/01-missing-primary-key.stderr
error: missing primary key field, use #[record(primary_key)] to define one
 --> tests/fail/01-missing-primary-key.rs:5:12
  |
5 | pub struct User {
  |            ^^^^
